src/objects/Case_Quality_Audit__c/Case_Quality_Audit__c.object-meta.xml
<CustomObject>
    <description>Used for auditing the quality of cases</description>
    <label>Case Quality Audit</label>
    <nameField>
        <displayFormat>CQA-{0}</displayFormat>
        <label>Case Quality Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Quality Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>