src/objects/Case_Quality_Audit__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Case.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Quality Audit</relationshipLabel>
    <relationshipName>Case_Quality_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>