src/objects/Case_Quality_Audit__c/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <formula>Text(Case__r.Case_Priority__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Priority</label>
    <type>Text</type>
</CustomField>