src/objects/Case_Quality_Audit__c/fields/Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channel__c</fullName>
    <formula>Text(Case__r.Communication_Channel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Communication Channel</label>
    <type>Text</type>
</CustomField>