src/objects/Case_Quality_Audit__c/fields/Time_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Time_Email_Sent__c</fullName>
    <formula>Case__r.Time_Email_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Email Sent</label>
    <type>DateTime</type>
</CustomField>