src/objects/Case_Quality_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Total_Score__c</columns>
    <columns>Audit_By__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Audit_by_Tier_4__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>GTO View</label>
    <language>en_US</language>
</ListView>