src/objects/Case_Quality_Audit__c/listViews/MY_GTO_Case_Audits.listView-meta.xml
<ListView>
    <fullName>MY_GTO_Case_Audits</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Total_Score__c</columns>
    <columns>Audit_By__c</columns>
    <columns>Audit_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Audit_by_Tier_4__c</columns>
    <filterScope>Mine</filterScope>
    <label>MY GTO Case Audits</label>
    <language>en_US</language>
</ListView>